# cpp-markdownify

./: CMakeLists.txt  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  build.sh  debug_convert_tags.cpp  debug_test.cpp  test_convert_tags.cpp  test_hr.cpp  test_hr_full.cpp  test_preprocess.cpp  test_xml_hr.cpp  xml_test.cpp  xml_test2.cpp
examples/: CMakeLists.txt  basic_usage.cpp
include/markdownify/: converter.hpp  markdownify.hpp  options.hpp  text_utils.hpp
src/: converter.cpp  text_utils.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_conversions.cpp
